--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,17 +14,20 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.562.0",
     "next": "^16.0.10",
-    "next-intl": "^4.5.8",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "next-intl": "^4.6.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "tailwindcss": "^3.4.19"
   },
   "devDependencies": {
+    "@eslint/compat": "^2.0.0",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^20.19.27",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.50.1",
+    "@typescript-eslint/parser": "^8.50.1",
     "autoprefixer": "^10.4.22",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
