--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,6 @@
 Django~=6.0
 python-dotenv~=1.2.1
 pillow~=10.4.0
+rest_framework_simplejwt~=0.0.2
+djangorestframework-simplejwt
+django-cors-headers
