--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "next-intl": "^4.6.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "tailwindcss": "^3.4.19"
   },
   "devDependencies": {
