--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 myenv
-__pycache__/
+plantapp/accounts/__pycache__
+plantapp/mysite/__pycache__
+plantapp/users/migrations/__pycache__
+plantapp/users/__pycache__
 plantapp/.env
 *.sqlite3
 
