--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\""
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.562.0",
     "next": "^16.0.10",
