--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 myenv
-plantapp/accounts/__pycache__
-plantapp/mysite/__pycache__
-plantapp/users/migrations/__pycache__
-plantapp/users/__pycache__
 plantapp/.env
 *.sqlite3
-/__pycache__/
+__pycache__/
 .DS_Store
 .env
