--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,22 @@ services:
     volumes:
       - ./backend:/app
     
-    command: sh -c "python manage.py migrate && daphne -b 0.0.0.0 -p 8000 mysite.asgi:application"
+    command: sh -c "cd plantapp && daphne -b 0.0.0.0 -p 8000 mysite.asgi:application"
     
     restart: unless-stopped
+    depends_on:
+      backend-migrate:
+        condition: service_completed_successfully
+  backend-migrate:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    
+    container_name: ft_transcendence_backend_migrate
+    
+    command: sh -c "cd plantapp && python manage.py migrate"
+    
+    restart: "no"
 
 
 
@@ -34,7 +47,10 @@ services:
     
     volumes:
       - ./frontend:/app
-      - /app/node_modules
+      - frontend_node_modules:/app/node_modules
 
     restart: unless-stopped
+
+volumes:
+  frontend_node_modules:
 
