--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,13 +44,14 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - NEXT_PUBLIC_API_URL=http://backend:8000
-      - NEXT_PUBLIC_WS_URL=ws://backend:8000
+      - NEXT_PUBLIC_API_URL=http://localhost:8000
+      - NEXT_PUBLIC_WS_URL=ws://localhost:8000
     
     volumes:
       - ./frontend:/app
       - frontend_node_modules:/app/node_modules
-
+    depends_on:
+      - backend
     restart: unless-stopped
 
 volumes:
