--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,4 +7,4 @@ django-cors-headers
 channels~=4.3.2
 daphne~=4.2.1
 django-organizations~=2.5.0
-social-auth-app-django
+social-auth-app-django~=5.4.3
