--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,20 @@
-
 services:
+
+  nginx:
+    image: nginx:latest
+    container_name: ft_transcendence_nginx
+    ports:
+      - "8080:80"
+      - "3000:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/certs:/etc/nginx/certs:ro
+    depends_on:
+      - frontend
+      - backend
+    restart: unless-stopped
+
+
   backend:
     build:
       context: ./backend
@@ -9,6 +24,9 @@ services:
     
     ports:
       - "8000:8000"
+
+    env_file:
+      - .env
 
     volumes:
       - ./backend:/app
@@ -27,14 +45,15 @@ services:
     
     container_name: ft_transcendence_backend_migrate
     
+    env_file:
+      - .env
+
     volumes:
       - ./backend:/app
       - backend_db:/app/plantapp
     command: python manage.py migrate
     
     restart: "no"
-
-
 
   frontend:
     build:
@@ -43,8 +62,8 @@ services:
     
     container_name: ft_transcendence_frontend
     
-    ports:
-      - "3000:3000"
+    # ports:
+    #   - "3000:3000"
     environment:
       - NEXT_PUBLIC_API_URL=http://localhost:8000
       - NEXT_PUBLIC_WS_URL=ws://localhost:8000
